Refactor chat recommendation flow: modularize context preparation, scoring, and prompt generation; improve readability and maintainability; preserve showtime/cinema filtering logic and all recent features.